Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c, path.h, tty.c, tty.h:
	move pwd() into path.c; check in autoconf if we have at least one
	of getcwd() / getwd()

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, configure.ac, tty.c, tty.h, tw.c, uedit.c, utils.c, utils.h,
	vfile.c:
	move jread() / jwrite() into utils.c and rename them to joe_read() /
	joe_write(); add checking of size_t and ssize_t into configure scripts

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	use .@7 terminfo entry for "End" key

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	use "Ctrl-K H for help" in -rmsg (F1 doesn't work in all cases)

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* blocks.c, help.c, macro.c, main.c, path.c, rc.c, regex.c, scrn.c,
	termcap.c, tw.c, ublock.c, uedit.c, usearch.c, vs.c, w.c:
	change indentation of cases in the switch() statement

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, main.c, path.c, rc.c, regex.c, scrn.c, termcap.c,
	termidx.c, tty.c, tw.c, ublock.c, uedit.c, uerror.c, uformat.c, undo.c,
	utag.c, vfile.c, vs.c, w.c:
	change indentation of do {} while(); cycles

Wed Nov 28 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, blocks.c, blocks.h, bw.c, bw.h, cmd.c, cmd.h, dir.c,
	help.c, help.h, kbd.c, kbd.h, macro.c, macro.h, main.c, main.h, menu.c,
	menu.h, path.c, path.h, poshist.c, poshist.h, pw.c, pw.h, queue.h,
	qw.c, qw.h, rc.c, rc.h, regex.c, scrn.c, scrn.h, tab.c, tab.h,
	termcap.c, tty.h, tw.c, tw.h, types.h, ublock.c, ublock.h, uedit.c,
	uerror.c, ufile.c, ufile.h, uformat.c, uformat.h, uisrch.c, uisrch.h,
	umath.c, umath.h, undo.c, undo.h, usearch.c, usearch.h, ushell.c,
	ushell.h, utag.c, utag.h, utils.c, utils.h, va.c, va.h, vfile.c,
	vfile.h, vs.c, vs.h, w.c, w.h: include only headers which are
	necessary and since the headers now don't depend on each other,
	include them in alphabetic order

Thu Nov 22 2001  Marek 'Marx' Grac <xgrac@fi.muni.cz>