@@ -1,3 +1,8 @@
+Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
+	* rc.c:
+	change indentation of initialization of pdefault, fdefault
+	and glopts arrays; add comments to [pf]default struct members
+
 Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
 	* configure.ac, path.c, path.h, tty.c, tty.h:
 	move pwd() into path.c; check in autoconf if we have at least one
